2007-09-24  Anders Carlsson  <andersca@apple.com>

        Reviewed by Adam.

        <rdar://problem/5494608>
        Seed: Safari will follow links in Flash movies without clicking.

        Make sure to handle mouseover and mouseout so the plug-in can track when the mouse is over it.
                
        * plugins/win/PluginViewWin.cpp:
        (WebCore::PluginViewWin::handleMouseEvent):

2007-09-24  Mike Fenton  <mike@staikos.net>

        Reviewed by George Staikos.

        Switch to using a QImage instead of a QPixmap to make transparency work.

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::drawImage):
        * html/HTMLCanvasElement.cpp:
        (WebCore::HTMLCanvasElement::paint):
        (WebCore::HTMLCanvasElement::createDrawingContext):
        (WebCore::HTMLCanvasElement::createPlatformImage):
        * html/HTMLCanvasElement.h:

2007-09-21  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Sam.

        - Updated project files to not use Edit and Continue for Debug Information since it doesn't work and breaks some functionality.

        * WebCore.vcproj/WebCore.vcproj:

2007-09-24  Brady Eidson  <beidson@apple.com>

        Reviewed by John Sullivan

        * loader/icon/IconDatabase.cpp:
        (WebCore::IconDatabase::iconForPageURL): Assert the page url is non-null

2007-09-20  Holger Hans Peter Freyther  <zecke@selfish.org>

        Rubber stamped by Adam.

        Renamed files from *Gdk to *Gtk (see #14732) using the
        work of Juan A. Suarez Romero as a base.

        GDK -> GTK

        * Projects/gdk/webcore-gdk.bkl:
        * WebCore.pro:
        * WebCoreSources.bkl:
        * loader/gdk: Removed.
        * loader/gdk/DocumentLoaderGdk.cpp: Removed.
        * loader/gtk: Added.
        * loader/gtk/DocumentLoaderGdk.cpp: Removed.
        * loader/gtk/DocumentLoaderGtk.cpp: Added.
        * page/FrameView.cpp:
        * page/FrameView.h:
        * page/gdk: Removed.